// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vislib event responses dispatcher return data for a vertical bars popover in normal mode 1`] = `
Object {
  "color": undefined,
  "config": Object {
    "get": [Function],
  },
  "data": Object {
    "hits": 7,
    "ordered": Object {
      "date": true,
      "interval": "PT30S",
      "max": 1559633555368,
      "min": 1559632107789,
    },
    "series": Array [
      Object {
        "id": "1",
        "label": "Late Aircraft Delay",
        "rawId": "Late Aircraft Delay-col-2-1",
      },
      Object {
        "id": "1",
        "label": "No Delay",
        "rawId": "No Delay-col-2-1",
      },
      Object {
        "id": "1",
        "label": "NAS Delay",
        "rawId": "NAS Delay-col-2-1",
      },
    ],
    "xAxisFormat": Object {
      "id": "date",
      "params": Object {
        "pattern": "HH:mm:ss",
      },
    },
    "xAxisLabel": "timestamp per 30 seconds",
    "xAxisOrderedValues": Array [
      1559632200000,
      1559632590000,
      1559632680000,
      1559632710000,
      1559632740000,
      1559633340000,
      1559633370000,
    ],
    "yAxisFormat": Object {
      "id": "number",
    },
    "yAxisLabel": "Count",
    "zAxisFormat": Object {
      "id": "terms",
      "params": Object {
        "id": "string",
        "missingBucketLabel": "Missing",
        "otherBucketLabel": "Other",
      },
    },
    "zAxisLabel": "",
  },
  "datum": Object {
    "extraMetrics": Array [],
    "parent": Object {
      "accessor": "col-1-3",
      "column": 1,
      "format": Object {
        "id": "terms",
        "params": Object {
          "id": "string",
          "missingBucketLabel": "Missing",
          "otherBucketLabel": "Other",
        },
      },
      "params": Object {},
      "title": "FlightDelayType: Descending",
    },
    "series": "No Delay",
    "seriesId": "No Delay-col-2-1",
    "seriesRaw": Object {
      "column": 1,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": "No Delay",
    },
    "x": 1559632740000,
    "xRaw": Object {
      "column": 0,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": 1559632740000,
    },
    "y": 2,
    "y0": 0,
    "yRaw": Object {
      "column": 2,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": 2,
    },
  },
  "e": Object {
    "target": Object {
      "nearestViewportElement": Object {
        "__data__": Object {
          "hits": 7,
          "ordered": Object {
            "date": true,
            "interval": "PT30S",
            "max": 1559633555368,
            "min": 1559632107789,
          },
          "series": Array [
            Object {
              "id": "1",
              "label": "Late Aircraft Delay",
              "rawId": "Late Aircraft Delay-col-2-1",
            },
            Object {
              "id": "1",
              "label": "No Delay",
              "rawId": "No Delay-col-2-1",
            },
            Object {
              "id": "1",
              "label": "NAS Delay",
              "rawId": "NAS Delay-col-2-1",
            },
          ],
          "xAxisFormat": Object {
            "id": "date",
            "params": Object {
              "pattern": "HH:mm:ss",
            },
          },
          "xAxisLabel": "timestamp per 30 seconds",
          "xAxisOrderedValues": Array [
            1559632200000,
            1559632590000,
            1559632680000,
            1559632710000,
            1559632740000,
            1559633340000,
            1559633370000,
          ],
          "yAxisFormat": Object {
            "id": "number",
          },
          "yAxisLabel": "Count",
          "zAxisFormat": Object {
            "id": "terms",
            "params": Object {
              "id": "string",
              "missingBucketLabel": "Missing",
              "otherBucketLabel": "Other",
            },
          },
          "zAxisLabel": "",
        },
      },
    },
  },
  "handler": Object {
    "data": Object {},
    "visConfig": Object {
      "get": [Function],
    },
  },
  "isPercentageMode": false,
  "label": "No Delay",
  "point": Object {
    "extraMetrics": Array [],
    "parent": Object {
      "accessor": "col-1-3",
      "column": 1,
      "format": Object {
        "id": "terms",
        "params": Object {
          "id": "string",
          "missingBucketLabel": "Missing",
          "otherBucketLabel": "Other",
        },
      },
      "params": Object {},
      "title": "FlightDelayType: Descending",
    },
    "series": "No Delay",
    "seriesId": "No Delay-col-2-1",
    "seriesRaw": Object {
      "column": 1,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": "No Delay",
    },
    "x": 1559632740000,
    "xRaw": Object {
      "column": 0,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": 1559632740000,
    },
    "y": 2,
    "y0": 0,
    "yRaw": Object {
      "column": 2,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": 2,
    },
  },
  "pointIndex": 0,
  "series": Array [
    Object {
      "id": "1",
      "label": "Late Aircraft Delay",
      "rawId": "Late Aircraft Delay-col-2-1",
    },
    Object {
      "id": "1",
      "label": "No Delay",
      "rawId": "No Delay-col-2-1",
    },
    Object {
      "id": "1",
      "label": "NAS Delay",
      "rawId": "NAS Delay-col-2-1",
    },
  ],
  "slices": undefined,
  "value": 2,
}
`;

exports[`Vislib event responses dispatcher return data for a vertical bars popover in percentage mode 1`] = `
Object {
  "color": undefined,
  "config": Object {
    "get": [Function],
  },
  "data": Object {
    "hits": 7,
    "ordered": Object {
      "date": true,
      "interval": "PT30S",
      "max": 1559633555368,
      "min": 1559632107789,
    },
    "series": Array [
      Object {
        "id": "1",
        "label": "Late Aircraft Delay",
        "rawId": "Late Aircraft Delay-col-2-1",
      },
      Object {
        "id": "1",
        "label": "No Delay",
        "rawId": "No Delay-col-2-1",
      },
      Object {
        "id": "1",
        "label": "NAS Delay",
        "rawId": "NAS Delay-col-2-1",
      },
    ],
    "xAxisFormat": Object {
      "id": "date",
      "params": Object {
        "pattern": "HH:mm:ss",
      },
    },
    "xAxisLabel": "timestamp per 30 seconds",
    "xAxisOrderedValues": Array [
      1559632200000,
      1559632590000,
      1559632680000,
      1559632710000,
      1559632740000,
      1559633340000,
      1559633370000,
    ],
    "yAxisFormat": Object {
      "id": "number",
    },
    "yAxisLabel": "Count",
    "zAxisFormat": Object {
      "id": "terms",
      "params": Object {
        "id": "string",
        "missingBucketLabel": "Missing",
        "otherBucketLabel": "Other",
      },
    },
    "zAxisLabel": "",
  },
  "datum": Object {
    "extraMetrics": Array [],
    "parent": Object {
      "accessor": "col-1-3",
      "column": 1,
      "format": Object {
        "id": "terms",
        "params": Object {
          "id": "string",
          "missingBucketLabel": "Missing",
          "otherBucketLabel": "Other",
        },
      },
      "params": Object {},
      "title": "FlightDelayType: Descending",
    },
    "series": "No Delay",
    "seriesId": "No Delay-col-2-1",
    "seriesRaw": Object {
      "column": 1,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": "No Delay",
    },
    "x": 1559632740000,
    "xRaw": Object {
      "column": 0,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": 1559632740000,
    },
    "y": 2,
    "y0": 0,
    "yRaw": Object {
      "column": 2,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": 2,
    },
  },
  "e": Object {
    "target": Object {
      "nearestViewportElement": Object {
        "__data__": Object {
          "hits": 7,
          "ordered": Object {
            "date": true,
            "interval": "PT30S",
            "max": 1559633555368,
            "min": 1559632107789,
          },
          "series": Array [
            Object {
              "id": "1",
              "label": "Late Aircraft Delay",
              "rawId": "Late Aircraft Delay-col-2-1",
            },
            Object {
              "id": "1",
              "label": "No Delay",
              "rawId": "No Delay-col-2-1",
            },
            Object {
              "id": "1",
              "label": "NAS Delay",
              "rawId": "NAS Delay-col-2-1",
            },
          ],
          "xAxisFormat": Object {
            "id": "date",
            "params": Object {
              "pattern": "HH:mm:ss",
            },
          },
          "xAxisLabel": "timestamp per 30 seconds",
          "xAxisOrderedValues": Array [
            1559632200000,
            1559632590000,
            1559632680000,
            1559632710000,
            1559632740000,
            1559633340000,
            1559633370000,
          ],
          "yAxisFormat": Object {
            "id": "number",
          },
          "yAxisLabel": "Count",
          "zAxisFormat": Object {
            "id": "terms",
            "params": Object {
              "id": "string",
              "missingBucketLabel": "Missing",
              "otherBucketLabel": "Other",
            },
          },
          "zAxisLabel": "",
        },
      },
    },
  },
  "handler": Object {
    "data": Object {},
    "visConfig": Object {
      "get": [Function],
    },
  },
  "isPercentageMode": true,
  "label": "No Delay",
  "point": Object {
    "extraMetrics": Array [],
    "parent": Object {
      "accessor": "col-1-3",
      "column": 1,
      "format": Object {
        "id": "terms",
        "params": Object {
          "id": "string",
          "missingBucketLabel": "Missing",
          "otherBucketLabel": "Other",
        },
      },
      "params": Object {},
      "title": "FlightDelayType: Descending",
    },
    "series": "No Delay",
    "seriesId": "No Delay-col-2-1",
    "seriesRaw": Object {
      "column": 1,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": "No Delay",
    },
    "x": 1559632740000,
    "xRaw": Object {
      "column": 0,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": 1559632740000,
    },
    "y": 2,
    "y0": 0,
    "yRaw": Object {
      "column": 2,
      "row": 4,
      "table": Object {
        "columns": Array [
          Object {
            "id": "col-0-2",
            "name": "timestamp per 30 seconds",
          },
          Object {
            "id": "col-1-3",
            "name": "FlightDelayType: Descending",
          },
          Object {
            "id": "col-2-1",
            "name": "Count",
          },
        ],
        "rows": Array [
          Object {
            "col-0-2": 1559632200000,
            "col-1-3": "Late Aircraft Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632590000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559632680000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632710000,
            "col-1-3": "NAS Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559632740000,
            "col-1-3": "No Delay",
            "col-2-1": 2,
          },
          Object {
            "col-0-2": 1559633340000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
          Object {
            "col-0-2": 1559633370000,
            "col-1-3": "No Delay",
            "col-2-1": 1,
          },
        ],
      },
      "value": 2,
    },
  },
  "pointIndex": 0,
  "series": Array [
    Object {
      "id": "1",
      "label": "Late Aircraft Delay",
      "rawId": "Late Aircraft Delay-col-2-1",
    },
    Object {
      "id": "1",
      "label": "No Delay",
      "rawId": "No Delay-col-2-1",
    },
    Object {
      "id": "1",
      "label": "NAS Delay",
      "rawId": "NAS Delay-col-2-1",
    },
  ],
  "slices": undefined,
  "value": 2,
}
`;
